Changes since labca_2
	2007/5/22 (TS):
    - labca now 'throws' (ezca) error codes when an error occurs
      (via mexErrMsgIdAndTxt / Scierror) that can be picked up
      by the application via catch + lasterror.
    - lcaNewMonitorValue() now 'throws' errors for all cases that
      in previous versions returned < 0 flag values. I.e., if
      lcaNewMonitorValue() completes successfully then it returns either
      0 or 1.
Changes since labca_2_1_beta (T.S):
    2007/5/9 (TS):
	- use c99 types int8_t, int16_t, int32_t rather than char, short, int.
	  (multiEzca.c; see also change made 2006/9/1).
	2007/5/8 (TS):
	- lcaPutNoWait() would not flush out commands (thanks to Greg Portman
      for reporting).
	2007/4/11 (TS):
	- scilab got stuck when initializing labca in non-windowing mode (-nw).
	  This was because we still checked the X loop in ctrlC-polled.c.
	  Now we use checkevts_() to find out if we have should work the X loop.
	2007/4/10 (Jim Sebek):
	- attempts to mcc-compile matlab scripts that use labCA had failed
	  apparently because the help (.m) files are in the same directory
	  as the respective mex object files.
	  Jim found a work-around that tests if a compilation is in progress
	  and which skips labca initialization if this is the case.
	2006/12/19 (TS):
	- mexLock() glue and CA libraries so that EPICS is not shut down
      as a result of matlab 'clear' operations [epics shutdown -> exit()].
	2006/9/1 (TS):
	- ezcaLong is really 32bit, i.e., I fixed multiEzca.c to use 'int'
	  instead of 'long' which is correct on 32bit and 64bit platforms.

Changes since labca_2_0_alpha (T.S):
    2006/4/14 (TS):
    - scilab now also uses polled 'ctrlC' handling (undocumented
      'isbrk() and inibrk()' routines.
    - changed shutdown procedure. This is still a pain and I don't
      understand exactly what needs to be done to avoid crashing
      the app on exit. Current solution seems to work on all
      platforms for both scilab and matlab.